[gd_scene load_steps=3 format=3 uid="uid://c3o6lo6u2jb67"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jam7s"]
[ext_resource type="Script" path="res://scripts/pauser.gd" id="2_or2el"]

[node name="Main" type="Node2D"]
process_mode = 1
script = ExtResource("1_jam7s")

[node name="Pauser" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_or2el")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Blobs" type="Label" parent="CanvasLayer"]
offset_right = 79.0
offset_bottom = 23.0
text = "Blobs: 100"
vertical_alignment = 1

[node name="BlobsEver" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -117.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Blobs Ever: 300"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Avg_Stats" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -117.0
offset_top = 35.0
offset_bottom = 58.0
grow_horizontal = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="PausedLabel" type="Label" parent="CanvasLayer"]
offset_left = 523.0
offset_top = 277.0
offset_right = 629.0
offset_bottom = 300.0
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer"]
process_mode = 2
offset_left = 506.0
offset_top = 308.0
offset_right = 646.0
offset_bottom = 340.0
text = "Resume"

[node name="MainMenuButton" type="Button" parent="CanvasLayer"]
process_mode = 2
offset_left = 506.0
offset_top = 348.0
offset_right = 646.0
offset_bottom = 380.0
text = "Main Menu
"

[connection signal="pressed" from="CanvasLayer/ResumeButton" to="Pauser" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuButton" to="Pauser" method="_on_main_menu_button_pressed"]
